# RCM

./: .gitignore  docker-compose.yml  kill_port.ps1  start_backend.bat
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 998de30ca232_add_adaptive_rules_table_and_cpt_risk_.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: explainer.py  feature_engineer.py  predictor.py
backend/app/db/: database.py  models.py  mongodb.py
backend/app/parsers/: edi_common.py  parser_835.py  parser_837.py
backend/app/repositories/: adaptive_rule_repo.py  claim_repo.py  config_repo.py  knowledge_repo.py  lifecycle_repo.py  model_repo.py  outcome_repo.py  prediction_repo.py  remittance_repo.py  stats_repo.py  training_repo.py
backend/app/schemas/: claim.py  dashboard.py  prediction.py  remittance.py
backend/app/services/: claim_rules.py  claim_service.py  claim_validator.py  decision_engine.py  knowledge_store.py  (+6 more)
backend/models/: demo_model.joblib  demo_model_backup_20260505_060449.joblib  demo_model_backup_20260505_060459.joblib  model_v1.joblib  model_v2.joblib  model_v3.joblib  model_v4.joblib  model_v5.joblib  model_v6.joblib  model_v7.joblib  model_v8.joblib  model_v9.joblib
backend/sample_files/: sample_835.edi  sample_835_batch2.edi  sample_835_batch3.edi  sample_837.edi  sample_837_batch2.edi  sample_837_batch3.edi  test_835_matching.edi  test_835_paid.edi  test_837_original.edi  test_837_resubmission.edi
backend/scripts/: train_demo_model.py
(+25 files in other folders)
